# moltathon

./: ARCHITECTURE.md  DEMO.md  README.md  idea.md  main.py  openclaw.plugin.json  pyproject.toml  setup.sh
output/cloudscale-ai/: index.html
output/dataflowlabs/: index.html
output/linear-app/: DEMO_TRANSCRIPT.md  brand-profile.json  index.html  outreach.json
output/techstartup-inc/: index.html
plugins/: index.js  plugins.md
signal_to_site/: __init__.py  browser.py  cli.py  config.py  deployer.py  linkt_client.py  models.py  notifications.py  outreach.py  page_generator.py  pipeline.py  researcher.py
signal_to_site.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
signal_to_site/templates/: landing_page.html
skills/signal-to-site/: SKILL.md
skills/signal-to-site/prompts/: generate-outreach.md  generate-page.md  orchestrate.md  research.md
workflows/: signal-pipeline.yaml
